--- a/css/style.css
+++ b/css/style.css
@@ -42,20 +42,20 @@
 }
 
 .container {
-    max-width: 1170px;
+    max-width: 73.125rem;
     margin: auto;
 }
 
 .header {
-    padding-top: 38px;
-    padding-bottom: 200px;
+    padding-top: 2.375rem;
+    padding-bottom: 12.5rem;
     background-color: #e9e9e9;
 }
 
 .header__flex {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 173px;
+    margin-bottom: 10.8125rem;
 }
 
 .header__flex-2 {
@@ -70,8 +70,8 @@
 
 .header__menu li {
     font-family: 'Montserrat-Medium';
-    font-size: 12px;
-    margin: 10px 15px;
+    font-size: 0.75rem;
+    margin: 0.625rem 0.9375rem;
 }
 
 .header__menu li a {
@@ -83,61 +83,61 @@
 
 .header__h1 {
     font-family: 'Montserrat-Medium';
-    font-size: 38px;
-    margin-bottom: 35px;
+    font-size: 2.375rem;
+    margin-bottom: 2.1875rem;
 }
 
 .header__text {
     font-family: 'Nunito Sans-Regular';
-    font-size: 18px;
+    font-size: 1.125rem;
     color: #787878;
-    margin-bottom: 39px;
+    margin-bottom: 2.4375rem;
 }
 
 .header__link {
     background-color: #10c9c3;
-    line-height: 54px;
-    font-size: 12px;
+    line-height: 3.375rem;
+    font-size: 0.75rem;
     font-family: 'Montserrat-Medium';
     text-decoration: none;
     text-transform: uppercase;
     color: white;
-    padding: 23px 46px;
+    padding: 1.4375rem 2.875rem;
 }
 
 .header__cont {
-    max-width: 480px;
+    max-width: 30rem;
     order: 1;
     align-self: flex-end;
 }
 
 .about-us {
-    padding: 100px 0;
+    padding: 6.25rem 0;
     text-align: center;
 }
 
 .about-us__h2 {
     font-family: 'Montserrat-Medium';
-    font-size: 30px;
-    margin-bottom: 40px;
+    font-size: 1.875rem;
+    margin-bottom: 2.5rem;
     color: #191919;
 }
 
 .about-us__text {
     font-family: 'Nunito Sans-Regular';
-    font-size: 16px;
-    margin-bottom: 40px;
+    font-size: 1rem;
+    margin-bottom: 2.5rem;
     color: #787878;
 }
 
 .about-us__container {
-    max-width: 620px;
+    max-width: 38.75rem;
     margin: auto;
 }
 
 .skills {
     background-color: #f8f9f9;
-    padding: 165px 0;
+    padding: 10.3125rem 0;
     position: relative;
 }
 
@@ -153,17 +153,17 @@
 }
 
 .skills__h2 {
-    font-size: 30px;
+    font-size: 1.875rem;
     font-family: 'Montserrat-Medium';
     color: #171717;
-    margin-bottom: 40px;
+    margin-bottom: 2.5rem;
 }
 
 .skills__text {
     font-family: 'Montserrat-Medium';
     text-transform: uppercase;
-    font-size: 12px;
-    margin-bottom: 20px;
+    font-size: 0.75rem;
+    margin-bottom: 1.25rem;
 }
 
 .skills__text:last-of-type {
@@ -171,11 +171,11 @@
 }
 
 .progressbar {
-    height: 3px;
+    height: 0.1875rem;
     position: relative;
     background: #d8d8d8;
-    max-width: 500px;
-    margin-bottom: 40px;
+    max-width: 31.25rem;
+    margin-bottom: 2.5rem;
 }
 
 .progressbar > span {
@@ -207,21 +207,21 @@
 
 .progress {
     background-color: #10c9c3;
-    padding: 100px 0;
+    padding: 6.25rem 0;
 }
 
 .progress__block p {
     display: inline-block;
     color: white;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-family: 'Montserrat-Medium';
     text-transform: uppercase;
 }
 
 .progress__block p span {
-    font-size: 12px;
+    font-size: 0.75rem;
     display: block;
-    margin-top: 5px;
+    margin-top: 0.3125rem;
 }
 
 .progress__block:first-of-type:before {
@@ -229,8 +229,8 @@
     content: "\e622";
     font-family: 'Pe-icon-7-stroke';
     color: white;
-    font-size: 40px;
-    margin-right: 15px;
+    font-size: 2.5rem;
+    margin-right: 0.9375rem;
 }
 
 .progress__block:nth-child(2):before {
@@ -238,8 +238,8 @@
     content: "\e66b";
     font-family: 'Pe-icon-7-stroke';
     color: white;
-    font-size: 40px;
-    margin-right: 15px;
+    font-size: 2.5rem;
+    margin-right: 0.9375rem;
 }
 
 .progress__block:nth-child(3):before {
@@ -247,8 +247,8 @@
     content: "\e611";
     font-family: 'Pe-icon-7-stroke';
     color: white;
-    font-size: 40px;
-    margin-right: 15px;
+    font-size: 2.5rem;
+    margin-right: 0.9375rem;
 }
 
 .progress__block:last-of-type:before {
@@ -256,8 +256,8 @@
     content: "\e6a1";
     font-family: 'Pe-icon-7-stroke';
     color: white;
-    font-size: 40px;
-    margin-right: 15px;
+    font-size: 2.5rem;
+    margin-right: 0.9375rem;
 }
 
 .progress__block {
@@ -272,7 +272,7 @@
 
 .work__block {
     width: 25%;
-    min-height: 300px;
+    min-height: 18.75rem;
     background-color: #838383;
 }
 
@@ -296,42 +296,42 @@
     font-family: 'Montserrat-Medium';
     width: 100%;
     background-color: #f5f5f5;
-    font-size: 12px;
+    font-size: 0.75rem;
     text-decoration: none;
     text-align: center;
     color: #8e8e8e;
     text-transform: uppercase;
-    padding-top: 46px;
-    padding-bottom: 45px;
+    padding-top: 2.875rem;
+    padding-bottom: 2.8125rem;
 }
 
 .video-block {
-    padding: 100px 0;
+    padding: 6.25rem 0;
     text-align: center;
 }
 
 .video-block__h2 {
     font-family: 'Montserrat-Medium';
-    font-size: 30px;
+    font-size: 1.875rem;
     color: #191919;
-    margin-bottom: 40px;
+    margin-bottom: 2.5rem;
 }
 
 .video-block__text {
     font-family: 'Nunito Sans-Regular';
-    font-size: 16px;
+    font-size: 1rem;
     color: #787878;
-    margin-bottom: 57px;
+    margin-bottom: 3.5625rem;
 }
 
 .video-block__cont {
-    max-width: 505px;
+    max-width: 31.5625rem;
     margin: auto;
 }
 
 .video-block__video {
     width: 100%;
-    height: 570px;
+    height: 35.625rem;
     background-color: #e9e9e9;
     position: relative;
 }
@@ -343,13 +343,13 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    margin-top: -40px;
-    margin-left: -40px;
+    margin-top: -2.5rem;
+    margin-left: -2.5rem;
 }
 
 .bloсk-direction__text {
     font-family: 'Nunito Sans-Regular';
-    font-size: 16px;
+    font-size: 1rem;
     color: #787878;
 }
 
@@ -358,11 +358,11 @@
     font-weight: bold;
     text-transform: uppercase;
     color: black;
-    margin-bottom: 19px;
+    margin-bottom: 1.1875rem;
 }
 
 .bloсk-direction__cont {
-    max-width: 240px;
+    max-width: 15rem;
     text-align: center;
 }
 
@@ -371,13 +371,14 @@
     content: "\e6af";
     font-family: 'Pe-icon-7-stroke';
     color: #656565;
-    font-size: 48px;
-    margin-bottom: 30px;
+    font-size: 3rem;
+    margin-bottom: 1.875rem;
 }
 
 .bloсk-direction {
-    padding-bottom: 100px;
+    padding-bottom: 6.25rem;
 }
+
 .bloсk-direction__flex {
     display: flex;
     flex-wrap: wrap;
@@ -387,37 +388,46 @@
 .carusel {
     background-color: #10c9c3;
 }
+
 .carusel .container p {
     text-align: center;
-    font-size: 24px;
+    font-size: 1.5rem;
     color: white;
     padding: 160px;
 }
-.owl-dots .owl-dot span{
+
+.owl-dots .owl-dot span {
     display: inline-block;
-    width: 6px;
-    height: 6px;
+    width: 0.375rem;
+    height: 0.375rem;
     background-color: #b0e8e6;
-    border-radius: 6px;
-    margin: 0 5px;
+    border-radius: 0.375rem;
+    margin: 0 0.3125rem;
 }
-.owl-dots{
+
+.owl-dots {
     text-align: center;
     position: absolute;
     width: 100%;
-    bottom: 60px;
+    bottom: 3.75rem;
 }
-.owl-dots .owl-dot.active span{
+
+.owl-dots .owl-dot.active span {
     background-color: white;
-    width: 11px;
-    height: 11px;
+    width: 0.6875rem;
+    height: 0.6875rem;
     position: relative;
-    bottom: -3px;
+    bottom: -0.1875rem;
 }
-.link-sponsors{
-    padding: 68px 0;
+
+.link-sponsors {
+    padding: 4.25rem 0;
 }
-.link-sponsors__flex{
+
+.link-sponsors__flex {
     display: flex;
     justify-content: space-between;
+}
+.block-form{
+    padding: 6.25rem 0;
 }
