--- a/css/style.css
+++ b/css/style.css
@@ -428,6 +428,71 @@
     display: flex;
     justify-content: space-between;
 }
-.block-form{
+
+.block-form {
     padding: 6.25rem 0;
+    text-align: center;
+    background-color: #f5f5f5;
+}
+
+.block-form__h2 {
+    font-family: 'Montserrat-Medium';
+    font-size: 1.875rem;
+    margin-bottom: 2.5rem;
+}
+
+.block-form__text {
+    font-family: 'Nunito Sans-Regular';
+    font-size: 1rem;
+    margin-bottom: 2.4375rem;
+}
+.block-form__cont{
+   max-width: 42rem;
+    margin: auto;
+}
+.block-form__cont form div {
+    display: flex;
+    justify-content: space-between;
+}
+.block-form__input{
+    font-family: 'Nunito Sans-Regular';
+    font-size: 0.9375rem;
+    width: 20rem;
+    display: inline-block;
+    border: none;
+    margin-bottom: 1.875rem;
+    line-height: 3rem;
+    padding: 0 1.25rem;
+    box-sizing: border-box;
+}
+.block-form__input-title{
+    font-family: 'Nunito Sans-Regular';
+    font-size: 0.9375rem;
+    width: 100%;
+    border: none;
+    margin-bottom: 1.875rem;
+    line-height: 3rem;
+    padding: 0 1.25rem;
+    box-sizing: border-box;
+}
+.block-form__textarea {
+    font-family: 'Nunito Sans-Regular';
+    font-size: 0.9375rem;
+    width: 100%;
+    padding: 1.125rem 1.25rem;
+    border: none;
+    resize: none;
+    min-height: 10.625rem;
+    box-sizing: border-box;
+    margin-bottom: 1.875rem;
+}
+.block-form__button{
+    font-family: 'Montserrat-Medium';
+    text-transform: uppercase;
+    color: white;
+    font-size: 0.75rem;
+    background-color: #10c9c3;
+    width: 11.25rem;
+    height: 3.375rem;
+    border: none;
 }
