--- a/fonts/stylesheet.css
+++ b/fonts/stylesheet.css
@@ -1,12 +1,24 @@
 @font-face {
-    font-family: 'Nunito Sans';
-    src: url('NunitoSans-Regular.eot');
-    src: url('NunitoSans-Regular.eot?#iefix') format('embedded-opentype'),
-        url('NunitoSans-Regular.woff2') format('woff2'),
-        url('NunitoSans-Regular.woff') format('woff'),
-        url('NunitoSans-Regular.ttf') format('truetype'),
-        url('NunitoSans-Regular.svg#NunitoSans-Regular') format('svg');
-    font-weight: normal;
+    font-family: 'Now';
+    src: url('Now-Medium.eot');
+    src: url('Now-Medium.eot?#iefix') format('embedded-opentype'),
+        url('Now-Medium.woff2') format('woff2'),
+        url('Now-Medium.woff') format('woff'),
+        url('Now-Medium.ttf') format('truetype'),
+        url('Now-Medium.svg#Now-Medium') format('svg');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Now';
+    src: url('Now-Bold.eot');
+    src: url('Now-Bold.eot?#iefix') format('embedded-opentype'),
+        url('Now-Bold.woff2') format('woff2'),
+        url('Now-Bold.woff') format('woff'),
+        url('Now-Bold.ttf') format('truetype'),
+        url('Now-Bold.svg#Now-Bold') format('svg');
+    font-weight: bold;
     font-style: normal;
 }
 
